is_official_build = true
google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"
use_official_google_api_keys = false
chrome_pgo_phase = 0
current_cpu = "x64"
enable_google_now = false
enable_hotwording = false
enable_iterator_debugging = false
#enable_nacl = true
ffmpeg_branding = "Chrome"
is_component_build = false
is_debug = false
proprietary_codecs = true
symbol_level = 0
target_cpu = "x64"
#exclude_unwind_tables = true
remove_webcore_debug_symbols = true
enable_webrtc = false
enable_widevine = false
#icu_use_data_file = true
#syzygy_optimize = true
enable_hevc_demuxing = true
enable_ac3_eac3_audio_demuxing = true
enable_mse_mpeg2ts_stream_parser = true
#use_jumbo_build = true
use_thin_lto = true
#full_wpo_on_official = true
#is_cfi = true
#use_lld = true
mac_sdk_path = "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk"
is_clang=true
clang_use_chrome_plugins=false
treat_warnings_as_errors=false
fatal_linker_warnings=false
use_ozone=false
use_sysroot=false
#enable_remoting=false
enable_nacl=false
enable_nacl_nonsfi=false
